   review by Sébastien Hinderer and Gabriel Scherer)

- #12371: ocamltest: fix recursive expansion of variables.
  (Antonin Décimo, Damien Doligez, review by Sébastien Hinderer,
   Damien Doligez, Gabriel Scherer, and Xavier Leroy)

- #12576: ocamldep: various refactors.
  (Antonin Décimo, review by Florian Angeletti, Gabriel Scherer, and Léo Andrès)

### Manual and documentation:

- #12338: clarification of the documentation of process related function in
  the unix module regarding the first element of args and shell's pid.
  (Christophe Raffalli, review by Florian Angeletti)

- #12473: Document in runtime/memory.c our current understanding of
  accesses to the OCaml heap from the C runtime code -- the problem
  of hybrid programs mixing two memory models.
  (Gabriel Scherer and Guillaume Munch-Maccagnoni, review by Olivier
   Nicole and Xavier Leroy)

### Compiler user-interface and warnings:

* #10613, #12405: Simplify the values used for the system variable (`system:` in
  `ocamlopt -config` or the `Config.system` constant). In particular, s390x and
  ppc64 now report "linux" instead of "elf"; all variants of 32-bit ARM on Linux
  now report "linux"; OpenBSD now reports "openbsd" instead of "bsd" for 32-bit
  ARM; FreeBSD, NetBSD and OpenBSD now report the same value for both x86_64 and
  x86_32; x86_32 systems matching *bsd but not freebsd*, netbsd* or openbsd*
  are no longer identified (as on x86_64); x86_32 Linux now reports "linux"
  instead of "linux_elf".
  (David Allsopp, request by Kate Deplaix, review by Sébastien Hinderer and
  Xavier Leroy)

- #12247: configure: --disable-ocamldebug can now be used instead
  of --disable-debugger (which remains available for compatibility)
  (Gabriel Scherer, review by Damien Doligez and Sébastien Hinderer)

- #12199: improve the error message for non-overriding `inherit!`
  (Florian Angeletti, review by Jules Aguillon)

- #12210: uniform style for inline code in compiler messages