@@ -215,6 +215,10 @@ Working version
 - #12576: ocamldep: various refactors.
   (Antonin Décimo, review by Florian Angeletti, Gabriel Scherer, and Léo Andrès)
 
+* #12497, #12613: Make ocamlc/ocamlopt fail with an error when no
+  input files are specified to build an executable.
+  (Antonin Décimo, review by Sébastien Hinderer)
+
 ### Manual and documentation:
 
 - #12338: clarification of the documentation of process related function in
